# RustStoreeBuildAndroidBug

./: Cargo.toml
client/droid/: build.gradle  local.properties  settings.gradle
client/droid/app/: build.gradle
client/droid/app/src/main/: AndroidManifest.xml
client/droid/app/src/main/java/com/ventasmovilesapp/libui/: ffiUI.kt
client/droid/app/src/main/java/com/ventasmovilesapp/ventasmoviles/: Api.kt  App.kt
client/droid/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml  ic_launcher_square.xml
client/droid/app/src/main/res/values/: strings.xml  themes.xml
client/droid/gradle/wrapper/: gradle-wrapper.properties
client/droid/libUI/: build.gradle
client/ui/: Cargo.toml
