[package]
name = "ui"
version = "0.4.0"
authors = ["Mario Alejandro Montoya <mamcx@elmalabarista.com>"]
edition = "2021"

[lib]
# this is needed to build for iOS and Android.
crate-type = ["staticlib", "cdylib"]

# this dependency is only needed for Android.
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.1"
jni = { version = "0.21.1", default-features = false }

[profile.release]
strip = true

[dependencies]
